Fix typo in stage 1

--- a/movies/Jenkinsfile
+++ b/movies/Jenkinsfile
@@ -89,7 +89,7 @@ pipeline {
 
         stage('Wait for deployment in DEV env') {
 		steps {
-			scripts {
+			script {
 				openshift.withCluster() {
 					openshift.withProject( "${DEV_PROJECT}"  ) {
 						openshift.selector("dc", "${APP_NAME}").related('pods').untilEach(1) {
